force-app/main/default/objects/ProductImage__c/ProductImage__c.object-meta.xml
<CustomObject>
    <label>Product Image</label>
    <nameField>
        <displayFormat>PI-{00000000}</displayFormat>
        <label>Product Image Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>