force-app/main/default/objects/ProductImage__c/fields/HeroImage__c.field-meta.xml
<CustomField>
    <fullName>HeroImage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Selected this image will be displayed on the ProductList Page</inlineHelpText>
    <label>Hero Image</label>
    <type>Checkbox</type>
</CustomField>