force-app/main/default/objects/ProductImage__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The related product</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Product_Imageses</relationshipName>
    <type>Lookup</type>
</CustomField>