force-app/main/default/objects/ProductImage__c/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <formula>IMAGE( ResourceURL__c , &apos;*&apos;, 32, 32)</formula>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>