force-app/main/default/objects/ProductImage__c/fields/ResourceURL__c.field-meta.xml
<CustomField>
    <fullName>ResourceURL__c</fullName>
    <inlineHelpText>Contains the fully qualified path of theimage to be shown on the product detail page</inlineHelpText>
    <label>Resource URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>