force-app/main/default/objects/ProductImage__c/fields/StaticResource__c.field-meta.xml
<CustomField>
    <fullName>StaticResource__c</fullName>
    <inlineHelpText>Required ifStatic Resource is Selected in Image Type</inlineHelpText>
    <label>Static Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>