force-app/main/default/objects/ProductImage__c/validationRules/If_I_Type_Static_Resource_Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>If_I_Type_Static_Resource_Field_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Type__c , &quot;Static Resource&quot;) , ISBLANK( StaticResource__c ))</errorConditionFormula>
    <errorMessage>If the image type is selected Static Resource then the &apos;Static_Resource__c&apos; field has to be filled.</errorMessage>
</ValidationRule>