force-app/main/default/objects/ProductImage__c/validationRules/If_Type_Selected_Static_Resource.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Type_Selected_Static_Resource</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Type__c , &apos;Static Resource&apos;),  OR(ISBLANK( ResourceURL__c )  , ISBLANK( StaticResource__c)))</errorConditionFormula>
    <errorMessage>If the image type is selected Static Resource, the Resource URL and Static Resource field must be filled.</errorMessage>
</ValidationRule>