force-app/main/default/objects/ProductImage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>URL__c</columns>
    <columns>StaticResource__c</columns>
    <columns>ResourceURL__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Product_Image__c</columns>
    <columns>Product__c</columns>
    <columns>Type__c</columns>
    <columns>HeroImage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>